--- a/launcher/src/components/SearchBar.css
+++ b/launcher/src/components/SearchBar.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+  width: 100%;
+  max-width: 1600px;
 }
 
 .search-input-wrapper {
